TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-06-18 MickeM
 * Fixed issue with parsing in test mode
 * Fixed Graphite client using wrong time for datestamp
 * Added so debug NSCA logs host name

2012-06-12 MickeM
 * Improved error handling in performance counters #436
 * Improved parsing of "legacy command lines"

2012-06-12 MickeM
 * Added log level = off to disable logging.
 * Added option in NSCAClient to hostname (auto-lc) to use lower case version of hostname. #533
 * Reworked how commands are read.
   If a command is defined without a section (default) no section will be added and instead a comment will be addded on how to add the section.
   This should (I hope) resolve the "missing command" for good.
 * Improved error messages for missing commands
 * Fixed scientific notation on performance data (#)

2012-05-19 MickeM
 * Fixed issue with checking rate counters (such as disk idle %)
 * Fixed (I think) the negative denominator counter issue
 * Fixed so indexes are only converted on \\123\\ and not also \\123 hello world\\ which caused some issues with numeric counter variables.

2012-05-13 MickeM
 * Take 2 on fixing the empty command parsing.

2012-05-07 MickeM
 * Fixed parsin of empty sections (CheckExternalScripts) - #524
 * Fixed so duplicate command are not created when both sections and shorthands are used (CheckExternalScripts)
 * Added a test to see if I can resolve the negative denominator issue.

2012-05-03 MickeM
 * Fixed issue with parsing size-type (usch as MinCritFree=10G)

2012-05-01 MickeM
 * Release 0.4.0

2012-04-26 MickeM
 * Fixed issue with check-cpu sampling interval being 10seconds and not 1/10 second.

2012-04-23 MickeM
 * Fixed issue with missing performance data via NSCA
 * Fixed issue with hostnames beeing lowercase

2012-04-12 MickeM
 * Fixed so keys with parents are advanced (in favour of the parent)