@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,179
-#define STRPRODUCTVER  "0,4,0,179"
-#define STRPRODUCTDATE "2012-06-18"
+#define PRODUCTVER     0,4,0,183
+#define STRPRODUCTVER  "0,4,0,183"
+#define STRPRODUCTDATE "2012-07-31"
 #endif // VERSION_HPP
